Optimized CSVReader objects